remove: unused imports by running ruff check . --fix --select F401

--- a/dev/notebooks/validate_output.ipynb
+++ b/dev/notebooks/validate_output.ipynb
@@ -21,11 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "\n",
-    "import polars as pl\n",
-    "import sweetviz as sv\n",
-    "from ydata_profiling import ProfileReport"
+    "from pathlib import Path\n"
    ]
   },
   {
